# BackPocket

./: CMakeLists.txt  License.txt  README.md  libBP.config  main.cpp
Audio/: AudioDriver.cpp  AudioDriver.hpp  AudioDriver_Jack.cpp  AudioDriver_PA.cpp  BP_AudioDriver.hpp  CMakeLists.txt  SynthContext.cpp  SynthContext.hpp
Data_Fifo/: Data_Fifo.hpp
File_IO/: AudioStream.hpp  IO_Worker.hpp
Graphs/: CMakeLists.txt  Edge.cpp  Edge.hpp  Engine.cpp  Engine.hpp  Graph.cpp  Graph.hpp  Graph_Common.hpp  Node.cpp  Node.hpp
Lf_Fifo/: Lf_Fifo.hpp
T_Fifo/: T_Fifo.hpp
ext/gtest/: CMakeLists.txt
lf_slist/: lf_slist.h
tests/: CMakeLists.txt  Test_Data_Fifo.cpp  Test_Data_Fifo.hpp  Test_Lf_Fifo.hpp  Test_NodesEdges.cpp  Test_NodesEdges.hpp  Test_T_Fifo.cpp  Test_T_Fifo.hpp  test_Lf_Fifo.cpp
